Mejoras en varios botones y mensajes del sistema en las pantalla de login y reservas, y he tocado algun string

--- a/res/layout/activity_reserva.xml
+++ b/res/layout/activity_reserva.xml
@@ -132,12 +132,14 @@
 		   	
 		   	<LinearLayout 
 		   	    android:id="@+id/layout_buttons_reserva"
+		   	    style="?android:attr/buttonBarStyle"
 		   	    android:layout_width="match_parent"
 		   	    android:layout_height="wrap_content"
 		   	    android:orientation="horizontal" >
 		   	
 			   	<Button
 			   	    android:id="@+id/btn_login_reserva"
+			   	    style="?android:attr/buttonBarButtonStyle"
 			   	    android:layout_width="0dp"
 			   	    android:layout_height="match_parent"
 			   	    android:layout_weight=".50"
@@ -145,6 +147,7 @@
 			   	
 			   	<Button
 			   	    android:id="@+id/btn_nueva_cuenta_reserva"
+			   	    style="?android:attr/buttonBarButtonStyle"
 			   	    android:layout_width="0dp"
 			   	    android:layout_height="match_parent"
 			   	    android:layout_weight=".50"
