--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
 		   	
 		   	<Button
 		   	    android:id="@+id/btn_confirmar_login"
+		   	    style="?android:attr/borderlessButtonStyle"
 		   	    android:layout_width="match_parent"
 		   	    android:layout_height="wrap_content"
 		   	    android:text="@string/login" />
